<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_simple"
        android:id="@+id/buttonSimple"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="startNewGameSimple" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_medium"
        android:id="@+id/menuMedium"
        android:layout_below="@+id/buttonSimple"
        android:layout_centerHorizontal="true"
        android:onClick="startNewGameMedium" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/buttonSettings"
        android:layout_below="@+id/buttonNewBoard"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_hard"
        android:id="@+id/buttonHard"
        android:onClick="startNewGameHard"
        android:layout_below="@+id/menuMedium"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_new"
        android:id="@+id/buttonNewBoard"
        android:onClick="startEmpty"
        android:layout_below="@+id/buttonHard"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
